# NougDug

./: .gitignore  AbstractGameState.cpp  AbstractGameState.h  Background.cpp  Background.h  Block.cpp  Block.h  Board.cpp  Board.h  CMakeLists.txt  Character.cpp  Character.h  Demodog.cpp  Demodog.h  Direction.h  Dirt.cpp  Dirt.h  EndState.cpp  EndState.h  Enemies.cpp  Enemies.h  ExtraPoints.cpp  ExtraPoints.h  Game.cpp  Game.h  MenuState.cpp  MenuState.h  Nougat.cpp  Nougat.h  ObjectSprites.h  PlayState.cpp  PlayState.h  Player.cpp  Player.h  README.md  Rock.cpp  Rock.h  Roots.h  Score.cpp  Score.h  (+11 more)
documents/Nougdug/: demogorgon.xcf  dirt.xcf  nougat.xcf  player.xcf  playerFront.xcf  rock.xcf  tunnels.xcf
textures/: dirt.xcf  playerRightNotMoving.xcf  tunnels4.xcf
